--- a/UI/src/app/dashboard/nav/nav.component.html
+++ b/UI/src/app/dashboard/nav/nav.component.html
@@ -56,12 +56,12 @@
           <ng-container *ngFor="let board of boardNameArr">
             <ng-container *featureFlag="board.boardName">
               <li class="nav-item p-d-flex p-pt-1 p-pb-1 w-100"
-                *ngIf="(board.boardName?.toLowerCase() !== 'maturity') || (board.boardName?.toLowerCase() === 'maturity' && kpiConfigData['kpi989'])">
+                *ngIf="(board.boardName?.toLowerCase() !== 'kpi maturity') || (board.boardName?.toLowerCase() === 'kpi maturity' && kpiConfigData['kpi989'])">
                 <a class="nav-link w-100"
                   [routerLink]="board.link"
                   routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"
                   [ngClass]="{'active': selectedTab?.toLowerCase() == board.boardName?.toLowerCase()}"
-                  (click)="selectTab(board.boardName)">
+                  (click)="selectTab(board.link)">
                   {{board.boardName}}
 
                   <img src="../../../assets/img/icon-feather-edit-3.svg" alt="Rename your dashboard" class="white-icon"
