--- a/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
+++ b/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
@@ -62,7 +62,7 @@
                                                                     <ng-container
                                                                         *ngIf="checkIfDataPresent(kpiChartData[kpi?.kpiId]);">
                                                                         <app-groupstackchart [legendType]="'normal'"
-                                                                            [xCaption]="kpi?.kpiDetail?.xaxisLabel"
+                                                                            [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] : kpi?.kpiDetail?.xaxisLabel"
                                                                             [yCaption]="kpi?.kpiDetail?.yaxisLabel"
                                                                             [unit]="kpi?.kpiDetail?.kpiUnit"
                                                                             [filter]="kpiSelectedFilterObj[kpi?.kpiId]"
@@ -92,7 +92,7 @@
                                                                     [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
                                                                     [unit]="kpi?.kpiDetail?.kpiUnit"
                                                                     [data]="kpiChartData[kpi?.kpiId]"
-                                                                    [xCaption]="kpi?.kpiDetail?.xaxisLabel"
+                                                                    [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] : kpi?.kpiDetail?.xaxisLabel"
                                                                     [yCaption]="kpi?.kpiDetail?.yaxisLabel"
                                                                     [name]="kpi?.kpiName" [kpiId]="kpi?.kpiId"
                                                                     [color]="chartColorList[kpi?.kpiId]"
@@ -105,7 +105,7 @@
                                                                     [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
                                                                     [unit]="kpi?.kpiDetail?.kpiUnit"
                                                                     [data]="kpiChartData[kpi?.kpiId]"
-                                                                    [xCaption]="kpi?.kpiDetail?.xaxisLabel"
+                                                                    [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] : kpi?.kpiDetail?.xaxisLabel"
                                                                     [yCaption]="kpi?.kpiDetail?.yaxisLabel"
                                                                     [name]="kpi?.kpiName" [kpiId]="kpi?.kpiId"
                                                                     [color]="chartColorList[kpi?.kpiId]"
@@ -117,7 +117,7 @@
                                                                     [data]="kpiChartData[kpi?.kpiId]" [lineChart]="true"
                                                                     [unit]="kpi?.kpiDetail?.kpiUnit"
                                                                     [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
-                                                                    [xCaption]="kpi?.kpiDetail?.xaxisLabel"
+                                                                    [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] : kpi?.kpiDetail?.xaxisLabel"
                                                                     [yCaption]="kpi?.kpiDetail?.yaxisLabel"
                                                                     [color]="chartColorList[kpi?.kpiId]"
                                                                     [barLegend]="kpi?.kpiDetail?.barLegend"
@@ -132,7 +132,7 @@
                                                                     [data]="kpiChartData[kpi?.kpiId]" [lineChart]="true"
                                                                     [unit]="kpi?.kpiDetail?.kpiUnit"
                                                                     [thresholdValue]="kpi?.kpiDetail?.thresholdValue"
-                                                                    [xCaption]="kpi?.kpiDetail?.xaxisLabel"
+                                                                    [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] : kpi?.kpiDetail?.xaxisLabel"
                                                                     [yCaption]="kpi?.kpiDetail?.yaxisLabel"
                                                                     [color]="chartColorList[kpi?.kpiId]"
                                                                     [barLegend]="kpi?.kpiDetail?.barLegend"
@@ -146,7 +146,7 @@
                                                                 <ng-container
                                                                     *ngSwitchCase="'CumulativeMultilineChart'">
                                                                     <app-group-bar-chart
-                                                                        [xCaption]="kpi?.kpiDetail?.xaxisLabel"
+                                                                        [xCaption]="this.filterApplyData.selectedMap['date'] && this.filterApplyData.selectedMap['date'][0] ? this.filterApplyData.selectedMap['date'][0] :kpi?.kpiDetail?.xaxisLabel"
                                                                         [yCaption]="kpi?.kpiDetail?.yaxisLabel"
                                                                         [unit]="kpi?.kpiDetail?.kpiUnit"
                                                                         [thresholdValue]="kpiThresholdObj[kpi?.kpiId]"
