--- a/UI/src/app/config/project-config/jira-config/jira-config.component.css
+++ b/UI/src/app/config/project-config/jira-config/jira-config.component.css
@@ -60,9 +60,9 @@ width: 100%;
 border-color: #B00020;
 }
 
-.search-box-custom-width {
+/* .search-box-custom-width {
 width: 450px;
-}
+} */
 
 /* ::ng-deep .ui-float-label textarea:focus ~ label,
 ::ng-deep .ui-float-label textarea.ui-state-filled ~ label {
