--- a/UI/src/app/config/advanced-settings/advanced-settings.component.html
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.html
@@ -18,12 +18,10 @@
 
 <p-toast [style]="{marginTop: '80px'}"></p-toast>
 <div class="p-grid p-m-0">
-  <div class="p-col-2">
+  <!-- <div class="p-col-2">
     <p-panelMenu [model]="items" [multiple]="false"></p-panelMenu>
-  </div>
-
-
-  <div class="p-col-10">
+  </div> -->
+  <div class="p-col-12">
     <div class="main">
       <div class="content server-role" *ngIf="selectedView === 'server_role'">
         <label class="p-text-bold">Server Role:</label>
@@ -37,8 +35,7 @@
         </div>
       </div>
       <div class="content select-scenario" *ngIf="selectedView === 'processor_state'">
-
-        <p-table [value]="processorData.data" [paginator]="true" [rows]="15" [loading]="dataLoading"
+        <p-table [value]="processorData.data" [paginator]="false" [rows]="15" [loading]="dataLoading"
           styleClass="p-datatable-striped"  loadingIcon="loading-img" [autoLayout]="true">
 
           <ng-template pTemplate="caption">
@@ -80,7 +77,7 @@
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-processor let-expanded="expanded">
-            <tr>
+            <tr *ngIf="showProcessorLastState(processor.processorName) !== 'NA'">
               <td class='custom-table-cell'>
                 {{ processor.processorName === 'Azure' ? 'Azure Board' : processor.processorName }}
               </td>
@@ -93,13 +90,13 @@
               </td>
               <td class='custom-table-cell'>
                 <div class="p-d-flex p-align-center">
-                  
+
                   <div class="p-d-flex p-align-center" *ngIf="(!findTraceLogForTool(processor.processorName)?.executionOngoing && processor.processorName === 'Jira') || processor.processorName !== 'Jira'">
                     <div *ngIf="showProcessorLastState(processor.processorName) !== 'NA'" class="status-container"
                       [ngClass]="showProcessorLastState(processor.processorName) === 'Success' ? 'active' : 'inactive'">
                       {{ showProcessorLastState(processor.processorName)}}
                     </div>
-                    <span *ngIf="showProcessorLastState(processor.processorName) === 'NA'">NA</span>
+                    <!-- <span *ngIf="showProcessorLastState(processor.processorName) === 'NA'">NA</span> -->
                   </div>
                 <div class="p-ml-2" *ngIf="processor.processorName === 'Jira'">
                   <i class="pi pi-info-circle" [ngClass]="{'disabled': !(findTraceLogForTool('Jira')?.progressStatusList?.length || findTraceLogForTool('Jira')?.errorMessage)}"
@@ -124,6 +121,9 @@
             </tr>
           </ng-template>
         </p-table>
+        <button pButton type="button" class="p-button-success p-button-raised p-button p-component p-mt-5" (click)="backToProjectList()">
+          <i class="pi pi-angle-double-left" style="font-size: 2rem"></i> Back to Project List
+        </button>
       </div>
     </div>
   </div>
