--- a/UI/src/app/config/project-config/tool-menu/tool-menu.component.css
+++ b/UI/src/app/config/project-config/tool-menu/tool-menu.component.css
@@ -23,7 +23,8 @@
   background-color: var(--color-white);
   padding: 16px;
   border-radius: 4px;
-  box-shadow:0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 1px 5px 0 rgba(0, 0, 0, 0.12);
   margin: 8px;
   width: calc(100% - 16px);
 }
@@ -53,16 +54,15 @@ small {
   width: calc(100% - 16px);
 }
 .card__collection > .card {
-margin:16px;
+  margin: 16px;
 }
 
-
 .card {
-  display: -webkit-box;/* OLD - iOS 6-, Safari 3.1-6 */
-  display: -moz-box;/* OLD - Firefox 19- (doesn't work very well) */
-  display: -ms-flexbox;/* TWEENER - IE 10 */
-  display: -webkit-flex;/* NEW - Chrome */
-  display: flex;/* NEW, Spec - Opera 12.1, Firefox 20+ */
+  display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box; /* OLD - Firefox 19- (doesn't work very well) */
+  display: -ms-flexbox; /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Chrome */
+  display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
@@ -76,23 +76,22 @@ margin:16px;
   -webkit-align-items: flex-start;
   -ms-flex-align: flex-start;
   align-items: flex-start;
-font-size: 16px;
-font-weight: 400;
-min-height: 20px;
-overflow: hidden;
-width:100%;
-max-width: 400px;
-z-index: 1;
-position: relative;
-border-radius: 2px;
-transition: box-shadow 0.35s cubic-bezier(0.4, 0, 1, 1);
+  font-size: 16px;
+  font-weight: 400;
+  min-height: 20px;
+  overflow: hidden;
+  width: 100%;
+  max-width: 400px;
+  z-index: 1;
+  position: relative;
+  border-radius: 2px;
+  transition: box-shadow 0.35s cubic-bezier(0.4, 0, 1, 1);
 }
-[class*="col--"] .card + .card { margin-top: 1.5vw; }
-.p-card > .card__media {
-flex: 100%;
-  height: 190px;
-  /* background-color: rgba(0,0,0,0.26);
-  color: var(--color-white);*/
+[class*='col--'] .card + .card {
+  margin-top: 1.5vw;
+}
+.p-card > .card__media,
+.grid-card > .card__media {
   font-size: 36px;
   line-height: 42px;
   padding: 16px;
@@ -101,14 +100,14 @@ flex: 100%;
 }
 .card__primary__title,
 .card__secondary__title {
-color: rgba(0,0,0,0.87);
+  color: rgba(0, 0, 0, 0.87);
   display: block;
-  display: -webkit-box;/* OLD - iOS 6-, Safari 3.1-6 */
-  display: -moz-box;/* OLD - Firefox 19- (doesn't work very well) */
-  display: -ms-flexbox;/* TWEENER - IE 10 */
-  display: -webkit-flex;/* NEW - Chrome */
-  display: flex;/* NEW, Spec - Opera 12.1, Firefox 20+ */
--webkit-box-orient: vertical;
+  display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box; /* OLD - Firefox 19- (doesn't work very well) */
+  display: -ms-flexbox; /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Chrome */
+  display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
+  -webkit-box-orient: vertical;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
@@ -119,16 +118,12 @@ color: rgba(0,0,0,0.87);
   flex: 0 0 100%;
   width: 100%;
 }
-.card__primary__title {padding: 24px 16px 16px;}
+.card__primary__title {
+  padding: 0 15px;
+}
 .card__primary__title__text {
-  display: block;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
+  display: inline-block;
   font-size: 24px;
-  font-weight: normal;
-  line-height: normal;
   -webkit-transform-origin: 149px 48px;
   -ms-transform-origin: 149px 48px;
   transform-origin: 149px 48px;
@@ -136,9 +131,10 @@ color: rgba(0,0,0,0.87);
   overflow: hidden;
   text-overflow: ellipsis;
   width: 180px;
+  margin: 0;
 }
 .card__primary__title__subtext {
-margin-bottom: 4px;
+  margin-bottom: 4px;
   font-size: 14px;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -147,42 +143,42 @@ margin-bottom: 4px;
   line-height: 16px;
 }
 .card__secondary__title {
-position: relative;
-padding: 16px 16px;
-font-size: 15px;
-color: rgba(0,0,0,0.87);
+  position: relative;
+  padding: 16px 16px;
+  font-size: 15px;
+  color: rgba(0, 0, 0, 0.87);
 }
 .card__secondary__title.avatar {
-padding-left: 72px;
+  padding-left: 72px;
 }
 .card__secondary__title__avatar {
-position: absolute;
-width: 40px;
-height: 40px;
+  position: absolute;
+  width: 40px;
+  height: 40px;
   top: 20px;
-left: 16px;
-background-color: rgba(0,0,0,0.26);
-border-radius: 50%;
+  left: 16px;
+  background-color: rgba(0, 0, 0, 0.26);
+  border-radius: 50%;
 }
 .card__secondary__title__avatar > .mi {
   padding: 10px;
   font-size: 20px;
-  color: rgba(0,0,0,0.87);
+  color: rgba(0, 0, 0, 0.87);
 }
 .card__secondary__title__text {
-font-weight: 600;
-color: rgba(0,0,0,.87);
+  font-weight: 600;
+  color: rgba(0, 0, 0, 0.87);
 }
 .card__secondary__title__subtext {
-margin-top: 4px;
-color: rgba(0,0,0,.87);
+  margin-top: 4px;
+  color: rgba(0, 0, 0, 0.87);
 }
 .card__actions {
-  display: -webkit-box;/* OLD - iOS 6-, Safari 3.1-6 */
-  display: -moz-box;/* OLD - Firefox 19- (doesn't work very well) */
-  display: -ms-flexbox;/* TWEENER - IE 10 */
-  display: -webkit-flex;/* NEW - Chrome */
-  display: flex;/* NEW, Spec - Opera 12.1, Firefox 20+ */
+  display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box; /* OLD - Firefox 19- (doesn't work very well) */
+  display: -ms-flexbox; /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Chrome */
+  display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
@@ -192,43 +188,45 @@ color: rgba(0,0,0,.87);
   -webkit-flex: 0 0 100%;
   flex: 0 0 100%;
   height: auto;
-  padding: 16px;
+  margin-top: 15px;
+  justify-content: space-evenly;
 }
 
 .card__actions .p-button {
-  margin-right: .5rem;
-  padding: 0.714rem .6rem;
+  margin-right: 0.5rem;
+  padding: 0.714rem 0.6rem;
 }
 
 .card__supporting__text,
 .lead__text {
   flex: 0 0 100%;
-color: rgba(0,0,0, 0.87);
+  color: rgba(0, 0, 0, 0.87);
   font-size: 14px;
   padding: 16px 48px 16px 16px;
 }
-.supporting__text {font-size: 14px;}
-.lead__text {font-size: 16px;}
+.supporting__text {
+  font-size: 14px;
+}
+.lead__text {
+  font-size: 16px;
+}
 .p-card > :first-child {
   border-radius: 2px 2px 0 0;
 }
 .p-card > :last-child {
-border-radius: 0 0 2px 2px;
+  border-radius: 0 0 2px 2px;
 }
 
-
 .p-card:hover {
-box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
-  0 3px 14px 2px rgba(0, 0, 0, 0.12),
-  0 5px 5px -3px rgba(0, 0, 0, 0.2);
+  border-bottom: 3px solid rgba(0, 0, 0, 0.5);
 }
 
 .card__media--view {
-display: -webkit-box;/* OLD - iOS 6-, Safari 3.1-6 */
-  display: -moz-box;/* OLD - Firefox 19- (doesn't work very well) */
-  display: -ms-flexbox;/* TWEENER - IE 10 */
-  display: -webkit-flex;/* NEW - Chrome */
-  display: flex;/* NEW, Spec - Opera 12.1, Firefox 20+ */
+  display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box; /* OLD - Firefox 19- (doesn't work very well) */
+  display: -ms-flexbox; /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Chrome */
+  display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
@@ -237,52 +235,52 @@ display: -webkit-box;/* OLD - iOS 6-, Safari 3.1-6 */
   flex-wrap: wrap;
 }
 .card__media--view .card__media__body {
--webkit-flex: 0 0 100%;
+  -webkit-flex: 0 0 100%;
   flex: 0 0 100%;
-min-height: 96px;
+  min-height: 96px;
   padding-bottom: 16px;
 }
 .card__media--view .card__media {
-position: absolute;
-width: 156px;
-height: 100px;
-top: 0;
-right: 0;
+  position: absolute;
+  width: 156px;
+  height: 100px;
+  top: 0;
+  right: 0;
 }
 .card__media--view .card__media > img {
   width: 100%;
   height: 100%;
 }
-.card__media--view.md .card__media{
-width: 112px;
-height: 112px;
+.card__media--view.md .card__media {
+  width: 112px;
+  height: 112px;
 }
 .card__media--view.md .card__media__body {
-min-height: 128px;
-padding-right: 128px;
+  min-height: 128px;
+  padding-right: 128px;
 }
 
 .card__media--view.lg .card__media__body {
-min-height: 168px;
-padding-right: 168px;
+  min-height: 168px;
+  padding-right: 168px;
 }
-.card__media--view.lg .card__media{
-width: 152px;
-height: 152px;
+.card__media--view.lg .card__media {
+  width: 152px;
+  height: 152px;
 }
 .card__media--view.full {
-height: 272px;
-background: #fff;
+  height: 272px;
+  background: #fff;
 }
 .card__media--view.full .card__media {
-position: relative;
-right: 32px;
-left: 16px;
-flex: 0 0 80%;
-height: 240px;
+  position: relative;
+  right: 32px;
+  left: 16px;
+  flex: 0 0 80%;
+  height: 240px;
 }
 .card__media--view.full .card__actions {
--webkit-box-orient: vertical;
+  -webkit-box-orient: vertical;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
@@ -295,42 +293,59 @@ height: 240px;
   padding: 24px 16px 0 0;
   margin-left: auto;
   border-radius: 0 2px 2px 0;
-
 }
 .card__media--view.full .card__actions .mi:first-of-type {
-margin-left: 0;
+  margin-left: 0;
 }
 .card__media--view.full .card__actions .mi {
-margin-bottom: 4px;
+  margin-bottom: 4px;
 }
 
-.mi.mi--primary  { color: rgb(33,150,243); }
-.mi.mi--positive { color: rgb(0,150,136);  }
-.mi.mi--warning  { color: rgb(255,87,34);  }
+.mi.mi--primary {
+  color: rgb(33, 150, 243);
+}
+.mi.mi--positive {
+  color: rgb(0, 150, 136);
+}
+.mi.mi--warning {
+  color: rgb(255, 87, 34);
+}
 
 .bg--default {
-background-color: rgb(69,90,100); }
+  background-color: rgb(69, 90, 100);
+}
 .bg--primary {
-background-color: #079fff; }
+  background-color: #079fff;
+}
 .bg--positive {
-background-color: rgb(56,142,60); }
+  background-color: rgb(56, 142, 60);
+}
 .bg--warning {
-background-color: rgb(255,160,0); }
+  background-color: rgb(255, 160, 0);
+}
 .bg--negative {
-background-color: rgb(211,47,47); }
+  background-color: rgb(211, 47, 47);
+}
 .bg--muted {
-background-color: rgb(158,158,158); }
+  background-color: rgb(158, 158, 158);
+}
 /*************************CARD CSS ends*************************/
 /** Card CSS ends **/
 
 ::ng-deep .p-dropdown {
-    width: 14rem;
-    font-weight: normal;
+  width: 14rem;
+  font-weight: normal;
 }
 
 ::ng-deep .p-dataview.p-dataview-list .p-dataview-content > .p-grid > div {
   border: none;
+  padding: 0;
 }
+
+::ng-deep .p-dataview.p-dataview-list .p-dataview-content > .p-grid > div:first-child .p-card {
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+}
+
 .figure {
   margin: 2rem 0 1rem;
 }
@@ -341,19 +356,19 @@ background-color: rgb(158,158,158); }
 ::ng-deep .tool-grid-item.p-card > figure.card__media.bg--3,
 ::ng-deep .tool-grid-item.p-card > figure.card__media.bg--4,
 ::ng-deep .tool-grid-item.p-card > figure.card__media.bg--5 {
-    height: auto;
-    flex: 0%;
+  height: auto;
+  flex: 0%;
 }
 
-/* ::ng-deep .tool-grid-item.card .card__primary__title {
-  max-width: 60%;
-} */
+::ng-deep .p-dataview .p-dataview-content {
+  padding-top: 0;
+}
 
 ::ng-deep .tool-grid-item.p-card > :first-child {
-    border-radius: 2px 2px 0 0;
-    display: inline-flex;
-    flex: 50%;
-    width: 50%;
+  border-radius: 2px 2px 0 0;
+  display: inline-flex;
+  flex: 50%;
+  width: 50%;
 }
 
 ::ng-deep .tool-list-item.p-card > :first-child {
@@ -361,87 +376,107 @@ background-color: rgb(158,158,158); }
 }
 
 ::ng-deep .p-dataview .p-paginator-bottom {
-    border: none;
+  border: none;
 }
 
 ::ng-deep .tool-list-item.p-card {
-    display: flex;
-    align-items: center;
-    padding: 1rem;
-    width: 100%;
-    max-width: 100%;
-    margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  width: 100%;
+  max-width: 100%;
+  box-shadow: none;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.12);
 }
 ::ng-deep .tool-list-item.p-card > figure.card__media {
-    width: 100px;
-    max-width: 100px;
-    height: 100px;
-    max-height: 100px;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-    margin-right: 2rem;
-    margin-bottom: 0;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  margin-right: 2rem;
+  margin-bottom: 0;
+}
+
+::ng-deep .card__media__body {
+  width: 100%;
 }
 
 ::ng-deep .tool-list-item .card__media__body {
-    flex: 1 1 0;
+  flex: 1 1 0;
 }
 ::ng-deep .tool-list-item .card__actions {
-    display: flex;
-    flex-direction: column;
-    max-width: 210px;
+  display: flex;
+  justify-content: flex-end;
+  max-width: 350px;
 }
 
 .bg--0 {
-  color: rgb(69,90,100);
- }
+  color: rgb(69, 90, 100);
+}
 .bg--1 {
-  background-color: rgb(211,47,47); }
+  background-color: rgb(211, 47, 47);
+}
 .bg--2 {
-  background-color: rgb(56,142,60); }
+  background-color: rgb(56, 142, 60);
+}
 .bg--3 {
-  background-color: #079fff; }
+  background-color: #079fff;
+}
 .bg--4 {
-  background-color: rgb(255,160,0); }
+  background-color: rgb(255, 160, 0);
+}
 .bg--5 {
-  background-color: rgb(158,158,158); }
+  background-color: rgb(158, 158, 158);
+}
 
-.p-inputgroup-addon{
+.p-inputgroup-addon {
   cursor: pointer;
   background-color: rgb(239, 239, 239);
 }
 
-:host::ng-deep .p-inputtext:read-only{
+/* :host::ng-deep .p-inputtext:read-only {
+  background-color: rgb(239, 239, 239);
+} */
+
+:host::ng-deep .p-dropdown-label {
+  text-transform: uppercase;
+}
+
+:host::ng-deep .grid .tool-grid-item.p-card {
+  padding: 15px;
+  margin: 0 !important;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.12);
+}
+
+:host::ng-deep .grid .tool-grid-item.p-card:hover {
+  border-bottom: 3px solid rgba(0, 0, 0, 0.5);
+}
+
+.color-green {
+  color: rgb(56, 142, 60);
   background-color: rgb(239, 239, 239);
 }
 
-.color-green{
-color: rgb(56,142,60);
-background-color: rgb(239, 239, 239);
+::ng-deep .p-dialog.p-confirm-dialog .p-confirm-dialog-message {
+  margin-left: 0px;
 }
 
+.enable-dialog-btn {
+  background-color: white;
+  color: black;
+  border: 1px solid;
+  box-sizing: border-box;
+  padding: 9px 13px;
+}
 
+::ng-deep .inner-wraper .p-tooltip .ui-tooltip {
+  background-color: #fbfbfb;
+}
 
-  ::ng-deep .p-dialog.p-confirm-dialog .p-confirm-dialog-message{
-    margin-left: 0px;
-  }
-
-  .enable-dialog-btn{
-    background-color:white;color: black;border: 1px solid;box-sizing: border-box;padding: 9px 13px;
-  }
-
-  ::ng-deep .inner-wraper .p-tooltip .ui-tooltip{
-    background-color: #fbfbfb;
-  }
-
-  ::ng-deep div.inner-content{
-    font-family: var(--font-medium);
-    color: #333;
-    background-color: #fbfbfb;
-    margin: -10px -10px;
-    padding: 5px 7px;
-    border: 1px solid #ced9d7;
-    border-radius: 5px;
-    box-shadow: 1px 1px #ced9d7;
-
-  }
-
+::ng-deep div.inner-content {
+  font-family: var(--font-medium);
+  color: #333;
+  background-color: #fbfbfb;
+  margin: -10px -10px;
+  padding: 5px 7px;
+  border: 1px solid #ced9d7;
+  border-radius: 5px;
+  box-shadow: 1px 1px #ced9d7;
+}
