--- a/UI/src/app/config/project-config/field-mapping/field-mapping.component.html
+++ b/UI/src/app/config/project-config/field-mapping/field-mapping.component.html
@@ -20,7 +20,8 @@
 <div class="main field-mapping p-5">
     <div class="p-d-flex p-align-center p-jc-between position-relative p-pb-3">
         <div class="p-d-flex p-align-center">
-            <a routerLink="/dashboard/Config/ToolMenu" pButton pRipple type="button" icon="pi pi-arrow-left"
+
+            <a [routerLink]="['/dashboard/Config/ProjectList/' + selectedProject.id + '/ToolMenu']" pButton pRipple type="button" icon="pi pi-arrow-left"
                 class="p-button-raised p-button-secondary back-button p-mr-4"></a>
             <h5 class="card__primary__title__text p-m-0">Field Mappings ({{selectedConfig?.Type?.toLowerCase() === 'kanban' ? 'Kanban' : 'Scrum'}})</h5>
         </div>
