--- a/UI/src/app/config/project-config/project-list/project-list.component.css
+++ b/UI/src/app/config/project-config/project-list/project-list.component.css
@@ -54,3 +54,10 @@ div.main {
   .col-head{
     word-break: break-word;
   }
+
+  :host::ng-deep .p-dialog.field-mapping {
+    min-width: 90vw !important;
+    width: auto !important;
+    max-width: 90vw;
+    min-height: 20vh !important;
+  }
