--- a/UI/src/app/config/project-config/project-list/project-list.component.html
+++ b/UI/src/app/config/project-config/project-list/project-list.component.html
@@ -82,6 +82,10 @@
     </p-table>
 </div>
 
+<p-dialog [(visible)]="isNewProject" [modal]="true" styleClass="field-mapping">
+    <app-basic-config *ngIf="isNewProject" (closeProjectSetupPopup)="isNewProject = false"></app-basic-config>
+</p-dialog>
+
 <p-confirmDialog #cd>
     <p-footer>
         <button *ngIf="projectConfirm" type="button" (click)="cd.accept()" pButton label="Yes"></button>
