--- a/UI/src/app/config/project-config/basic-config/basic-config.component.css
+++ b/UI/src/app/config/project-config/basic-config/basic-config.component.css
@@ -98,7 +98,6 @@ width: 40%;
 
 button {
   height: 34px;
-  width: 90px;
 }
 
 .nav-container{
@@ -108,4 +107,11 @@ padding-left: .3rem;
 border: solid 1px grey;
 font-weight: bolder;
 color: black
+}
+
+:host ::ng-deep .p-steps .p-steps-item.p-highlight .p-steps-number{
+  background-color: #9e9d9e;
+}
+.blue-hover-link:hover {
+  color: blue;
 }
