get project list post close popup

--- a/UI/src/app/config/project-config/project-list/project-list.component.html
+++ b/UI/src/app/config/project-config/project-list/project-list.component.html
@@ -83,7 +83,7 @@
 </div>
 
 <p-dialog [(visible)]="isNewProject" [modal]="true" styleClass="field-mapping">
-    <app-basic-config *ngIf="isNewProject" (closeProjectSetupPopup)="isNewProject = false"></app-basic-config>
+    <app-basic-config *ngIf="isNewProject" (closeProjectSetupPopup)="isNewProject = false;getData()"></app-basic-config>
 </p-dialog>
 
 <p-confirmDialog #cd>
