--- a/UI/src/app/config/project-config/basic-config/basic-config.component.css
+++ b/UI/src/app/config/project-config/basic-config/basic-config.component.css
@@ -106,12 +106,12 @@ padding-bottom: .8rem;
 padding-left: .3rem;
 border: solid 1px grey;
 font-weight: bolder;
-color: black
+color: var(--color-black-dark)
 }
 
 :host ::ng-deep .p-steps .p-steps-item.p-highlight .p-steps-number{
-  background-color: #9e9d9e;
+  background-color: var(--color-gray-9e)
 }
 .blue-hover-link:hover {
-  color: blue;
+  color: var(--color-blue)
 }
