--- a/UI/src/app/shared-module/field-mapping-field/field-mapping-field.component.html
+++ b/UI/src/app/shared-module/field-mapping-field/field-mapping-field.component.html
@@ -18,7 +18,7 @@
   <div [ngSwitch]="fieldConfig?.fieldType">
 
     <div class="p-inputgroup" *ngSwitchCase="'text'">
-        <input type="text" pInputText id="fieldConfig?.fieldName" placeholder="Enter {{fieldConfig?.fieldLabel}}"
+        <input type="text" pInputText id="fieldConfig?.fieldName" placeholder="Enter {{fieldConfig?.placeHolderText ? fieldConfig?.placeHolderText : fieldConfig?.fieldLabel}}"
         styleClass="p-w-100" [(ngModel)]="value" (change)="setValue()" [disabled]="fieldConfig?.readOnly">
         <button type="button" pButton pRipple icon="pi pi-search" *ngIf="fieldConfig?.fieldCategory"
         (click)="showDialogToAddValue(true, fieldConfig?.fieldName, fieldConfig?.fieldCategory)"></button>
@@ -26,7 +26,7 @@
 
     <div class="p-inputgroup" *ngSwitchCase="'chips'">
         <p-chips styleClass="p-w-100" [disabled]="fieldConfig?.readOnly" inputId="fieldConfig?.fieldName"
-            placeholder="Enter {{fieldConfig?.fieldLabel}}" addOnBlur="true" [(ngModel)]="value" (onAdd)="setValue()" (onRemove)="setValue()">
+            placeholder="Enter {{fieldConfig?.placeHolderText ? fieldConfig?.placeHolderText : fieldConfig?.fieldLabel}}" addOnBlur="true" [(ngModel)]="value" (onAdd)="setValue()" (onRemove)="setValue()">
         </p-chips>
         <button type="button" pButton pRipple icon="pi pi-search" *ngIf="fieldConfig?.fieldCategory"
         (click)="showDialogToAddValue(false, fieldConfig?.fieldName, fieldConfig?.fieldCategory)"></button>
@@ -44,7 +44,7 @@
     </div>
 
     <div *ngSwitchCase="'multiselect'">
-        <p-multiSelect id="fieldConfig?.fieldName" [options]="fieldConfig.options" placeholder="Select Priority"
+        <p-multiSelect id="fieldConfig?.fieldName" [options]="fieldConfig.options" placeholder="{{fieldConfig?.placeHolderText ? fieldConfig?.placeHolderText : fieldConfig?.fieldLabel}}"
         styleClass="p-w-100" [showHeader]="false" [(ngModel)]="value" (onChange)="setValue()">
         </p-multiSelect>
     </div>
