--- a/UI/src/app/config/project-config/tool-menu/tool-menu.component.html
+++ b/UI/src/app/config/project-config/tool-menu/tool-menu.component.html
@@ -17,7 +17,32 @@
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <p-toast [style]="{marginTop: '80px'}"></p-toast>
 <div class="main">
-  	<h1>Project Configuration</h1>
+  <div class="p-d-flex p-jc-between p-align-center p-mb-5">
+      <h1>Project Configuration</h1>
+      <div>
+        <span class="p-text-capitalize" style="font-size: 1.2rem;">
+            Select Project
+        </span>
+        <span class="p-ml-3">
+          <p-dropdown [options]="userProjects" [(ngModel)]="selectedProject" optionLabel="name"
+          [style]="{'min-width':'300px', 'max-width':'300px'}" [panelStyle]="{'min-width':'inherit', 'max-width':'inherit'}"
+          [filter]="true" filterBy="name" [showClear]="false" placeholder="Select a Project"
+          (onChange)="updateProjectSelection()"
+          >
+            <ng-template pTemplate="selectedItem">
+                <div class="userProject-item userProject-item-value" *ngIf="selectedProject">
+                    <div>{{selectedProject.name}}</div>
+                </div>
+            </ng-template>
+            <ng-template let-userProject pTemplate="item">
+                <div class="userProject-item">
+                    <div>{{userProject.name}}</div>
+                </div>
+            </ng-template>
+          </p-dropdown>
+        </span>
+      </div>
+  </div>
     <div class="p-p-3 p-mb-4 p-grid bg-cyan" *ngIf="selectedProject">
         <ng-container *ngFor="let project of selectedProject | keyvalue : originalOrder">
             <div class="p-md-2 long-text float-left pad-r-0 pad-l-0 inline-div" *ngIf="project?.key?.toLowerCase() !== 'id' && project?.key != 'saveAssigneeDetails' ">
@@ -28,29 +53,6 @@
     </div>
     <p-dataView #dv [value]="tools" [loading]="dataLoading" [paginator]="false" [rows]="16" filterBy="toolName" layout="list">
         <ng-template pTemplate="header">
-            <div class="p-d-flex p-jc-end p-align-center p-mb-5 p-pb-5">
-                <span class="p-text-capitalize" style="font-size: 1.2rem;">
-                    Select Project
-                </span>
-                <span class="p-ml-3">
-                  <p-dropdown [options]="userProjects" [(ngModel)]="selectedProject" optionLabel="name"
-                  [style]="{'min-width':'300px', 'max-width':'300px'}" [panelStyle]="{'min-width':'inherit', 'max-width':'inherit'}"
-                  [filter]="true" filterBy="name" [showClear]="false" placeholder="Select a Project"
-                  (onChange)="updateProjectSelection($event)"
-                  >
-                    <ng-template pTemplate="selectedItem">
-                        <div class="userProject-item userProject-item-value" *ngIf="selectedProject">
-                            <div>{{selectedProject.name}}</div>
-                        </div>
-                    </ng-template>
-                    <ng-template let-userProject pTemplate="item">
-                        <div class="userProject-item">
-                            <div>{{userProject.name}}</div>
-                        </div>
-                    </ng-template>
-                  </p-dropdown>
-                </span>
-            </div>
             <div class="p-d-flex p-flex-column p-flex-md-row p-jc-md-between">
                 <div class="p-d-flex">
                     <a routerLink="/dashboard/Config/ProjectList" pButton pRipple type="button" icon="pi pi-arrow-left"
