resolution bug fixed

--- a/UI/src/app/config/project-config/jira-config/jira-config.component.css
+++ b/UI/src/app/config/project-config/jira-config/jira-config.component.css
@@ -84,3 +84,7 @@ display: block !important;
   color : var(--color-secondary-blue);
   cursor: pointer;
 }
+:host ::ng-deep .p-datatable.p-datatable-striped .p-datatable-tbody>tr>td{
+  word-break: break-word;
+}
+ 
