DTS-38828 + DTS-39142 WIP

--- a/UI/src/app/config/project-config/basic-config/basic-config.component.html
+++ b/UI/src/app/config/project-config/basic-config/basic-config.component.html
@@ -137,7 +137,7 @@
             <p-steps [model]="steps" [readonly]="false"></p-steps>
           </div>
           <div class="p-d-flex p-jc-center p-pb-3">
-            <label><a routerLink="/dashboard/Config/connection-list">Continue to Tool connections</a></label>
+            <label><a href="#" (click)="getNewProjectId()">Continue to Tool connections</a></label>
           </div>
 
           <div class="p-d-flex p-jc-center p-pb-3">
